# code-problems

./: README.md
advent_of_code/2015/day_1/: day_1.py
advent_of_code/2015/day_2/: day_2.py
advent_of_code/2016/: README.md
advent_of_code/2016/day_1/: puzzle_1.rs  puzzle_2.rs
advent_of_code/2016/day_2/: puzzle_1.rs  puzzle_2.rs
advent_of_code/2016/day_3/: puzzle_1.rs  puzzle_2.rs
advent_of_code/2016/day_4/: Cargo.toml
advent_of_code/2020/: README.md
advent_of_code/2021/: Cargo.toml
advent_of_code/2023/: README.md  day_1.hs  x2023.cabal
advent_of_code/2023/app/: Day1.hs  Day2.hs  Day4.hs  Day6.hs  Day7-2.hs  Day7.hs
advent_of_code/2024/: .gitignore  day_1.ua  day_2.ua
advent_of_code/2025/: .gitignore  README.md  day_1.lua  day_10.input  day_10.lua  day_11.lua  day_12.lua  day_2.lua  day_3.lua  day_4.lua  day_5.lua  day_6.lua  day_7.lua  day_8.lua  day_9.lua  utils.lua
cracking_coding_interview/: README.md
cracking_coding_interview/chapter_1/: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp
cracking_coding_interview/chapter_10/: bubble_sort.cpp  sorts.cpp
cracking_coding_interview/chapter_2/: 2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  linked_list.cpp
cracking_coding_interview/chapter_3/: 3_1.cpp  3_2.cpp  3_4.cpp  3_5.cpp
leetcode/lc128/: Cargo.toml
leetcode/lc146/: Cargo.toml
leetcode/lc15/: Cargo.toml
leetcode/lc155/: Cargo.toml
leetcode/lc190/: Cargo.toml
leetcode/lc201/: Cargo.toml
leetcode/lc208/: Cargo.toml
leetcode/lc3/: Cargo.toml
leetcode/lc33/: Cargo.toml
leetcode/lc622/: Cargo.toml
leetcode/lc91/: Cargo.toml
(+82 files in other folders)
