cabal-version:      2.4
name:               x2023
version:            0.1.0.0
author:             Bruno Roy
maintainer:         brunoroy1024@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable day1
    main-is:        Day1.hs
    build-depends:    base ^>=4.17.2.0,
                      split >= 0.2 && < 0.3
    hs-source-dirs:   app
    default-language: Haskell2010
