cabal-version:      2.4
name:               x2023
version:            0.1.0.0
author:             Bruno Roy
maintainer:         brunoroy1024@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable day1
    main-is:        Day1.hs
    build-depends:    base >=4.14.1.0,
                      split >= 0.2 && < 0.3
    hs-source-dirs:   app
    default-language: Haskell2010

executable day2
    main-is:        Day2.hs
    build-depends:    base ^>=4.14.1.0,
                      split >= 0.2 && < 0.3,
                      regex-tdfa >= 1.0 && < 1.4
    hs-source-dirs:   app
    default-language: Haskell2010

executable day4
    main-is:        Day4.hs
    build-depends:    base ^>=4.14.1.0,
                      split >= 0.2 && < 0.3,
                      regex-tdfa >= 1.0 && < 1.4
    hs-source-dirs:   app
    default-language: Haskell2010